--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="greetings">
+ <div class="greetings">
   <h1 class="index">
   HELLO... 
   </h1>
@@ -7,6 +7,46 @@
   </h1>
 </div>
 <div class="content_wrapper">
-  <div class="content"> content</div>
+  <div class="content" id="output"> content</div>
   <div class="content_text">text</div>
 </div>
+
+<script type="text/template" id="cat_template"> 
+  <button> 
+    {{ name }}
+  </button>
+</script>
+
+<script >
+  
+_.templateSettings = {
+  interpolate: /\{\{(.+?)\}\}/g
+}
+
+var display_category = function(category_name){
+  var button = ["<button>"];
+  var $template = _.template($('#cat_template').html());
+  var $htmlOutput = $template({
+    name: category_name
+   });
+  $('#output').append($htmlOutput);
+}
+
+
+var options = {
+  url: 'http://localhost:3000/api/categories',
+  type: 'get',
+  dataType: 'json'
+}
+
+$.ajax(options).done(function(data){
+  console.log(data);
+  _.each(data, function(category, index){
+    var category_name = category.name;
+     display_category(category_name)
+
+  });
+  
+});
+  
+</script>
