--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,15 +2,17 @@
 
  <div class="greetings">
   <h1 class="index">
-  HELLO...
+  Let's figure out where you should live.
   </h1>
   <h1 class="index_about">
-  WHERE TO HELPS YOU TO FIGURE OUT WHERE TO MEET UP.
+  What are you most interested in?
   </h1>
 </div>
 <div class="buttons">
 
 </div>
+
+<canvas id="chart" width="400" height="400"></canvas>
 
 <script type="text/template" id="cat_template">
   <button class="category-button" data-categoryid={{ id }}>{{ name }}</button>
@@ -58,8 +60,10 @@ $('.buttons').on('click', '.category-button', function() {
     dataType: 'json'
   };
 
-  var label = []
-  var data = []
+
+// changed the variable names as otherwise they wouldve conflicted with chart.js conventions.
+  var chart_label = []
+  var chart_data = []
   var combination = []
 
   $.ajax(options).done(function(groups) {
@@ -75,14 +79,75 @@ $('.buttons').on('click', '.category-button', function() {
     console.log(display_cities)
 
     for (var i = 0; i <= 10; i += 1) {
-      label.push(display_cities[i].name);
-      data.push(display_cities[i].group_count);
+      chart_label.push(display_cities[i].name);
+      chart_data.push(display_cities[i].group_count);
     };
-    console.log(label)
-    console.log(data)
+    console.log(chart_label)
+    console.log(chart_data)
+
+//drawing the table
+
+var ctx = $("#chart").get(0).getContext("2d");
+
+
+var data = {
+    labels: chart_label,
+    datasets: [
+        {
+            label: "My First dataset",
+            fillColor: "rgba(220,220,220,0.5)",
+            strokeColor: "rgba(220,220,220,0.8)",
+            highlightFill: "rgba(220,220,220,0.75)",
+            highlightStroke: "rgba(220,220,220,1)",
+            data: chart_data
+        },
+    ]
+};
+
+var options = {
+    //Boolean - Whether the scale should start at zero, or an order of magnitude down from the lowest value
+    scaleBeginAtZero : true,
+
+    //Boolean - Whether grid lines are shown across the chart
+    scaleShowGridLines : true,
+
+    //String - Colour of the grid lines
+    scaleGridLineColor : "rgba(0,0,0,.05)",
+
+    //Number - Width of the grid lines
+    scaleGridLineWidth : 1,
+
+    //Boolean - Whether to show horizontal lines (except X axis)
+    scaleShowHorizontalLines: true,
+
+    //Boolean - Whether to show vertical lines (except Y axis)
+    scaleShowVerticalLines: true,
+
+    //Boolean - If there is a stroke on each bar
+    barShowStroke : true,
+
+    //Number - Pixel width of the bar stroke
+    barStrokeWidth : 2,
+
+    //Number - Spacing between each of the X value sets
+    barValueSpacing : 5,
+
+    //Number - Spacing between data sets within X values
+    barDatasetSpacing : 1,
+
+    //String - A legend template
+    legendTemplate : "<ul class=\"<%%=name.toLowerCase()%>-legend\"><%% for (var i=0; i<datasets.length; i++){%><li><span style=\"background-color:<%%=datasets[i].fillColor%>\"></span><%%if(datasets[i].label){%><%%=datasets[i].label%><%%}%></li><%%}%></ul>"
+
+}
+
+var myBarChart = new Chart(ctx).Bar(data, options);
+
   });
 
+
 });
+
+
 
 
 </script>
