--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,153 +1,32 @@
+<header>
+  <h1 class="index">Let's figure out where you should live</h1>
 
+  <h1 class="index_about">Pick one thing you're most interested in:</h1>
+</header>
 
- <div class="greetings">
-  <h1 class="index">
-  Let's figure out where you should live.
-  </h1>
-  <h1 class="index_about">
-  What are you most interested in?
-  </h1>
+<div class="first-container">
+  <div class="categories-buttons">
+    
+  </div>
+  
+  <div class="bar-pie-charts">
+    <div class="bar-chart">
+      <canvas id="bar-chart" width="400" height="400"></canvas>
+    </div>
+
+    <div class="pie-chart">
+      <canvas id="pie-chart" width="400" height="400"></canvas>
+    </div>
+  </div>
 </div>
-<div class="buttons">
 
+<div class="second-container">
+  <div class="compare-buttons">
+    
+  </div>
+
+  <div class="radar-chart">
+    <canvas id="radar-chart" width="600" height="600"></canvas>
+  </div>
 </div>
-
-<canvas id="chart" width="400" height="400"></canvas>
-
-<script type="text/template" id="cat_template">
-  <button class="category-button" data-categoryid={{ id }}>{{ name }}</button>
-</script>
-
-<script >
-
-_.templateSettings = {
-  interpolate: /\{\{(.+?)\}\}/g
-}
-
-
-var display_category = function(category_name, category_id){
-  var $template = _.template($('#cat_template').html());
-  var $htmlOutput = $template({
-    name: category_name,
-    id: category_id
-   });
-  $('.buttons').append($htmlOutput);
-}
-
-
-var options = { 
-
-  url: 'http://localhost:3000/api/categories',
-  type: 'get',
-  dataType: 'json'
-}
-
-$.ajax(options).done(function(data){
-  _.each(data, function(category, index){
-    var category_name = category.name;
-    var category_id = category.id;
-      display_category(category_name, category_id)
-  });
-});
-
-$('.buttons').on('click', '.category-button', function() {
-  var category_name_clicked = $(this).text();
-
-  console.log(category_name_clicked)
-  var options = {
-    type: "GET",
-    url: 'http://localhost:3000/api/groups',
-    dataType: 'json'
-  };
-
-
-// changed the variable names as otherwise they wouldve conflicted with chart.js conventions.
-  var chart_label = []
-  var chart_data = []
-  var combination = []
-
-  $.ajax(options).done(function(groups) {
-    _.each(groups, function(group) {
-      if (group.category_name === category_name_clicked) {
-        combination.push({ name: group.city_name, group_count: group.group_count})
-      };
-    });
-
-    var display_cities = combination.sort(function(a, b) {
-      return parseFloat(b.group_count) - parseFloat(a.group_count);
-    });
-    console.log(display_cities)
-
-    for (var i = 0; i <= 10; i += 1) {
-      chart_label.push(display_cities[i].name);
-      chart_data.push(display_cities[i].group_count);
-    };
-    console.log(chart_label)
-    console.log(chart_data)
-
-//drawing the table
-
-var ctx = $("#chart").get(0).getContext("2d");
-
-
-var data = {
-    labels: chart_label,
-    datasets: [
-        {
-            label: "My First dataset",
-            fillColor: "rgba(220,220,220,0.5)",
-            strokeColor: "rgba(220,220,220,0.8)",
-            highlightFill: "rgba(220,220,220,0.75)",
-            highlightStroke: "rgba(220,220,220,1)",
-            data: chart_data
-        },
-    ]
-};
-
-var options = {
-    //Boolean - Whether the scale should start at zero, or an order of magnitude down from the lowest value
-    scaleBeginAtZero : true,
-
-    //Boolean - Whether grid lines are shown across the chart
-    scaleShowGridLines : true,
-
-    //String - Colour of the grid lines
-    scaleGridLineColor : "rgba(0,0,0,.05)",
-
-    //Number - Width of the grid lines
-    scaleGridLineWidth : 1,
-
-    //Boolean - Whether to show horizontal lines (except X axis)
-    scaleShowHorizontalLines: true,
-
-    //Boolean - Whether to show vertical lines (except Y axis)
-    scaleShowVerticalLines: true,
-
-    //Boolean - If there is a stroke on each bar
-    barShowStroke : true,
-
-    //Number - Pixel width of the bar stroke
-    barStrokeWidth : 2,
-
-    //Number - Spacing between each of the X value sets
-    barValueSpacing : 5,
-
-    //Number - Spacing between data sets within X values
-    barDatasetSpacing : 1,
-
-    //String - A legend template
-    legendTemplate : "<ul class=\"<%%=name.toLowerCase()%>-legend\"><%% for (var i=0; i<datasets.length; i++){%><li><span style=\"background-color:<%%=datasets[i].fillColor%>\"></span><%%if(datasets[i].label){%><%%=datasets[i].label%><%%}%></li><%%}%></ul>"
-
-}
-
-var myBarChart = new Chart(ctx).Bar(data, options);
-
-  });
-
-
-});
-
-
-
-
-</script>
+ 
