--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,17 +12,24 @@
   <div class="bar-pie-charts">
     <div class="bar-chart">
       <canvas id="bar-chart" width="400" height="400"></canvas>
+
     </div>
 
     <div class="pie-chart">
       <canvas id="pie-chart" width="400" height="400"></canvas>
+      <h1 id="top-city"></h1>
     </div>
   </div>
 </div>
 
 <div class="second-container">
-  <div class="compare-buttons">
-    
+  <div class="comparison">
+    <div class="comparison-text">
+
+    </div>
+    <div class="comparison-buttons">
+
+    </div>
   </div>
 
   <div class="radar-chart">
