--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,9 +4,8 @@
   <h1 class="index_about">Pick one thing you're most interested in:</h1>
 </header>
 
-<div class="first-container">
+<div class="first-container" id="part1">
   <div class="categories-buttons">
-    
   </div>
   
   <div class="bar-pie-charts">
@@ -28,5 +27,6 @@
   <div class="radar-chart">
     <canvas id="radar-chart" width="600" height="600"></canvas>
   </div>
+  <a href="#part1">go to the bar&pie</a>
 </div>
  
