create world map using D3

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="//code.jquery.com/jquery-2.0.0.js"></script>
   <title>MeetData</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-
 </head>
 <body>
   <div class="container">
-    
+
   <%= yield %>
 
     <div class="footer">
