--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,12 +17,17 @@
 
     <div class="pie-chart">
       <canvas id="pie-chart" width="300" height="300"></canvas>
+      <div>
       <h1 id="top-city"></h1>
+      <h2 id="top-city-category-groups"></h2>
+      <h2 id="top-city-all-groups"></h2>
+        
+      </div>
     </div>
   </div>
 </div>
 
-<div class="second-container">
+<div id="compare"class="second-container">
   <div class="comparison">
     <div class="comparison-text">
 
