--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -19,7 +19,7 @@ body {
 
 header {
 
-  text-align: center; 
+  text-align: center;
 }
 
 .footer {
@@ -69,12 +69,12 @@ header {
 }
 
 .category-button:hover {
-  background: #fffd6a;
+  background: #ef4b5d;
   text-decoration: none;
 }
 
 .category-button:focus {
-  background-color:#fffd6a;
+  background-color:#ef4b5d;
   outline: 0;
 }
 
@@ -83,7 +83,7 @@ header {
     justify-content: space-around;
     margin: 3em;
     vertical-align: middle;
-    
+
 
 }
 
@@ -99,7 +99,7 @@ header {
 
 
 .comparison {
-  
+
   margin: auto;
   display: inline-block;
   justify-content: space-around;
@@ -110,7 +110,7 @@ header {
 .comparison-text {
   width: 34%;
   display: inline-block;
-  
+
 
 }
 
@@ -133,12 +133,52 @@ header {
 }
 
 .compare-button:hover {
-  background: #fffd6a;
+  background: #ef4b5d;
   text-decoration: none;
 }
 
 .compare-button:focus {
-  background-color:#fffd6a;
+  background-color:#ef4b5d;
   outline: 0;
 }
 
+/* MAP STYLING */
+#map {
+  background-color: transparent;
+  /*border: 1px solid #ccc;*/
+}
+.background {
+  fill: none;
+  pointer-events: all;
+}
+#countries, #states {
+  fill: #00adb3;
+  stroke: #fff;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+}
+#countries .active, #states .active {
+  fill: #89a;
+}
+#cities {
+  stroke-width: 0;
+}
+.city {
+  fill: #345;
+  stroke: #fff;
+}
+pre.prettyprint {
+  border: 1px solid #ccc;
+  margin-bottom: 0;
+  padding: 9.5px;
+}
+div.tooltip {
+  color: #222;
+  background: #fff;
+  padding: .5em;
+  text-shadow: #f5f5f5 0 1px 0;
+  border-radius: 2px;
+  box-shadow: 0px 0px 2px 0px #a6a6a6;
+  opacity: 0.9;
+  position: absolute;
+}
