--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,30 +1,25 @@
 <div class="first-container">
   <div class="start">
-  <h1>There are over 2M cities in the world</h1>
-  <h4>Come and see which one is right for you</h4>
-
+    <h1>There are over 2M cities in the world</h1>
+    <h4>Come and see which one is right for you</h4>
   </div >
-  <div id="letsgo">
-  <a href="#compare-me" class="category-button smoothScroll" >Let's go</a>
 
+  <div id="letsgo">
+    <a href="#compare-me" class="category-button smoothScroll" >Let's go</a>
   </div>
 </div>
 
-
-
-
-  <div id="compare-me"class="second-container">
+<div id="compare-me" class="second-container">
   <h1 id="pick-one">Pick one thing you're most interested in:</h1>
-  <div class="categories-buttons">
 
+  <div class="categories-buttons">
   </div>
+
   <h3 id="loading"></h3>
 
   <div class="bar-pie-charts">
-
     <div class="bar-chart">
       <canvas id="bar-chart" width="400" height="400"></canvas>
-
     </div>
 
     <div class="pie-chart">
@@ -36,40 +31,38 @@
       </div>
     </div>
   </div>
-<div id="compare">
-  <div class="comparison">
-    <div class="comparison-text">
 
+  <div id="compare">
+    <div class="comparison">
+      <div class="comparison-text">
+      </div>
+
+      <div class="comparison-buttons">
+      </div>
     </div>
-    <div class="comparison-buttons">
-
-    </div>
-
   </div>
 </div>
-</div>
-
-
-
-
-
-
 
 <div class="third-container">
-    <h3 id="loading2"></h3>
+  <h3 id="loading2"></h3>
+
   <div class="radar-chart">
     <canvas id="radar-chart"></canvas>
   </div>
+
   <br><br><br>
-   <div class ="go-to-map"></div>
+  <div class ="go-to-map"></div>
 </div>
 
+<div class="fourth-container">
   <h1>come into my spacerocket</h1>
+
   <div id="to-map" class="map">
     <div id="map"></div>
   </div>
 
-<a href="#compare-me" class="category-button smoothScroll">back to top</a>
-
+  <a href="#compare-me" class="category-button smoothScroll">back to top</a>
 </div>
+
+
 <br><br>
