--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
     
   </div >
   <div id="letsgo">
-  <a href="#compare-me" class="category-button smoothScroll" >Let's go</a>
+  <a href="#compare-me" class="letsgo-btn smoothScroll" >Let's go</a>
     
   </div>
 </div>
@@ -62,10 +62,10 @@
     <canvas id="radar-chart"></canvas>
   </div>
   <br><br><br>
-   <div class ="go-to-map"></div>
+   <div class ="go-to-map "></div>
 </div>
 
-  <h1>come into my spacerocket</h1>
+  <h4>Click on a city you feel like going to</h4>
   <div id="to-map" class="map">
   <style>
   #map {
@@ -77,7 +77,7 @@
     pointer-events: all;
   }
   #countries, #states {
-    fill: #e0393e;
+    fill: #fcce47;
     stroke: #fff;
     stroke-linejoin: round;
     stroke-linecap: round;
@@ -210,6 +210,6 @@
 </script>
 
 </div>
-<a href="#compare-me" class="category-button smoothScroll">back to top</a>
+<a href="#compare-me" class="letsgo-btn smoothScroll">back to top</a>
 </div>
 <br><br>
