--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -69,17 +69,34 @@ body {
   margin: 1px;
 }
 
+.letsgo-btn {
+
+    font-family: Menlo, regular;
+  color: #000000;
+  font-size: 10px;
+  background: #ffffff;
+  padding: 10px 20px 10px 20px;
+  border: solid #000000 2px;
+  text-decoration: none;
+  margin: 1px;
+
+}
+
+.letsgo-btn:hover {
+   background: #C0D6DF;
+}
+
 .categories-buttons {
   text-align: center;
 }
 
 .category-button:hover {
-  background: #fffd6a;
+  background: #D8F1A0;
   text-decoration: none;
 }
 
 .category-button:focus {
-  background-color:#fffd6a;
+  background-color:#D8F1A0;
   outline: 0;
 }
 
@@ -136,26 +153,16 @@ body {
 }
 
 .compare-button:hover {
-  background: #fffd6a;
+  background: rgba(255, 64, 104,0.3),
   text-decoration: none;
 }
 
 .compare-button:focus {
-  background-color:#fffd6a;
+  background: rgba(255, 64, 104,0.3);
   outline: 0;
 }
 
-.no-js #loader { display: none;  }
-.js #loader { display: block; position: absolute; left: 100px; top: 0; }
-.se-pre-con {
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  z-index: 9999;
-  background: url(images/loader-64x/Preloader_2.gif) center no-repeat #fff;
-}
+
 #loading {
   padding-top: 170px;
 }
@@ -170,6 +177,46 @@ body {
 
 #letsgo {
   margin-top: 50px;
+}
+
+#map {
+  background-color: transparent;
+  /*border: 1px solid #ccc;*/
+}
+.background {
+  fill: none;
+  pointer-events: all;
+}
+#countries, #states {
+  fill: #F9C924;
+  stroke: #fff;
+  stroke-linejoin: round;
+  stroke-linecap: round;
+}
+#countries .active, #states .active {
+  fill: #89a;
+}
+#cities {
+  stroke-width: 0;
+}
+.city {
+  fill: #345;
+  stroke: #fff;
+}
+pre.prettyprint {
+  border: 1px solid #ccc;
+  margin-bottom: 0;
+  padding: 9.5px;
+}
+div.tooltip {
+  color: white;
+  background: #ef4b5d;
+  padding: .5em;
+  text-shadow: #ef4b5d 0 1px 0;
+  border-radius: 2px;
+  box-shadow: 0px 0px 2px 0px #ef4b5d;
+  opacity: 0.9;
+  position: absolute;
 }
 
 
