--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -58,9 +58,9 @@
 </div>
 
 <div class="fourth-container">
-  <h4>click on a city you feel like going to</h4>
+  <h2 id="to-map" >click on a city you feel like going to</h2>
 
-  <div id="to-map" class="map">
+  <div  class="map">
     <div id="map"></div>
   </div>
 
